doctor work bench UI Cleanup

--- a/client/src/Components/DoctorsWorkbench/MyDay/myday.css
+++ b/client/src/Components/DoctorsWorkbench/MyDay/myday.css
@@ -10,7 +10,7 @@
 
 .myday .my-calendar {
   text-align: center;
-  background: #3bb3b7;
+  background: #01b3a8;
   color: #fff; }
   .myday .my-calendar .myDay_date {
     float: none;
