--- a/client/src/Components/DoctorsWorkbench/MyDay/myday.scss
+++ b/client/src/Components/DoctorsWorkbench/MyDay/myday.scss
@@ -12,7 +12,7 @@
 
   .my-calendar {
     text-align: center;
-    background: #3bb3b7;
+    background: #01b3a8;
     color: #fff;
 
     .myDay_date {
