--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -405,4 +405,15 @@ $forntSize: 0.7rem;
     background-color: #485a63;
     margin: 1px;
   }
+
+  .portletHeader {
+    border-bottom: 1px solid #e2e2e2;
+    padding-top: 10px;
+    padding-bottom: 4px;
+    width: 100%;
+    label {
+      font-weight: 500;
+      font-size: 0.9rem;
+    }
+  }
 }
