Doctor's Workbench Merged major fixes

--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -2,6 +2,10 @@
   .panel-layout {
     margin-top: 10px;
   }
+
+  .pat-code:hover {
+    text-decoration: underline;
+  }
   .go-button {
     cursor: pointer;
     margin-top: 15px;
