Lab setup and lab specimen changes done

--- a/client/src/Components/experiment.css
+++ b/client/src/Components/experiment.css
@@ -117,3 +117,6 @@
 .form-control-dark:focus {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25); }
+
+.editor .quill .ql-container {
+  min-height: 40vh; }
