--- a/client/src/Components/experiment.scss
+++ b/client/src/Components/experiment.scss
@@ -145,3 +145,11 @@
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
+
+.editor {
+  .quill {
+    .ql-container {
+      min-height: 40vh;
+    }
+  }
+}
