--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -2,6 +2,7 @@
 body {
   line-height: 1.45;
   font-family: $fontFamily;
+  background-color: #fafafa;
 }
 :global {
   .header {
@@ -540,10 +541,6 @@ body {
       background: #000000;
     }
   }
-}
-
-body {
-  background-color: #f2f2f2;
 }
 
 .tab-container nav li label {
