--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -37,31 +37,34 @@
       }
     }
     .patientName {
-      width: 260px;
+      max-width: 230px;
       margin-top: 2px;
       border-left: 1px solid #e1e1e1;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
+      min-height: 57px;
       h6 {
         font-size: 1rem;
         margin-bottom: 2px;
         color: #000;
-        line-height: 1.3rem;
+        line-height: 1.2rem;
       }
       p {
         font-size: 0.8rem;
+        margin: 0;
+        padding: 0;
       }
     }
     .patientDemographic {
       font-size: 0.8rem;
-      width: 160px;
       line-height: 1.3rem;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
+      min-height: 57px;
       span {
-        display: inline-block;
+        display: block;
         b {
           color: #34b8bc;
         }
@@ -69,13 +72,13 @@
     }
     .patientHospitalDetail {
       font-size: 0.8rem;
-      width: 260px;
       line-height: 1.3rem;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
+      min-height: 57px;
       span {
-        display: inline-block;
+        display: block;
         b {
           color: #34b8bc;
         }
@@ -83,15 +86,14 @@
     }
     .patientVital {
       font-size: 0.8rem;
-      width: 215px;
+      width: 210px;
       line-height: 1.3rem;
-      border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
+      min-height: 57px;
       span {
         display: inline-block;
-        margin-right: 5px;
-        padding-right: 5px;
+        margin-right: 8px;
 
         b {
           color: #34b8bc;
@@ -106,9 +108,11 @@
         height: 60px;
         border: 1px solid #e1e1e1;
         font-size: 0.7rem;
+        margin-left: 0;
       }
       i {
         display: block;
+        margin-bottom: 5px;
       }
     }
   }
