--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -2,6 +2,61 @@
   font-family: "Roboto", sans-serif;
   min-width: 100%;
   min-height: 100%;
+
+  input[type="text"] {
+    height: 25px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    overflow: hidden;
+    background: #fff;
+    border: 1px solid #3a95aa;
+  }
+  input[type="password"] {
+    height: 25px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    overflow: hidden;
+    background: #fff;
+    border: 1px solid #3a95aa;
+  }
+  .margintop15 {
+    margin-top: 8%;
+  }
+  .row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .loginFormContainer {
+    padding: 15px;
+    margin: 5% auto 0;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12);
+  }
+  .frgtPass {
+    text-align: center;
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+  .sign-btn {
+    box-shadow: 0 7px 0 #35879a;
+    border: 1px solid #6bd1eb;
+    background: #3a95aa;
+    color: #fff;
+  }
+  .sign-btn:hover {
+    box-shadow: 0 3px 0 #35879a;
+    border: 1px solid #48b1ca;
+    background: #3a95aa;
+  }
+  .checkbox {
+    font-weight: normal;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
 }
 .bg {
   background-image: url("../../assets/images/login_bg.jpeg");
@@ -10,13 +65,4 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.margintop15 {
-  margin-top: 15%;
-}
-.row-eq-height {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
 }
