Cleaned Update by, Created by in the Client Side, Subjective Allergy, Diagnosis and Diet Integration in the high level

--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -98,15 +98,53 @@
   color: #797979;
   font-size: 1rem;
   text-transform: uppercase; }
-  .patientProfile .patientTopNav ul li span {
-    font-size: 0.8rem;
-    text-transform: uppercase;
-    padding: 5px 15px;
-    color: #858585; }
-  .patientProfile .patientTopNav ul li span.active {
-    border-bottom: 3px solid #34b8bc;
-    color: #000; }
-  .patientProfile .patientTopNav ul li span:hover {
-    border-bottom: 3px solid #34b8bc;
-    color: #000;
-    cursor: pointer; }
+  .patientProfile .patientTopNav ul {
+    position: relative; }
+    .patientProfile .patientTopNav ul li span {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      padding: 5px 15px;
+      color: #858585; }
+    .patientProfile .patientTopNav ul li span.active {
+      border-bottom: 3px solid #34b8bc;
+      color: #000; }
+    .patientProfile .patientTopNav ul li span:hover {
+      border-bottom: 3px solid #34b8bc;
+      color: #000;
+      cursor: pointer; }
+  .patientProfile .patientTopNav .patient-quick-info {
+    color: #34b8bc;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: absolute;
+    right: 20px; }
+    .patientProfile .patientTopNav .patient-quick-info li {
+      background: #ffffff;
+      color: #53bcb1;
+      padding: 4px 10px 3px;
+      cursor: pointer;
+      margin: 0 10px;
+      list-style: none;
+      display: inline-block; }
+      .patientProfile .patientTopNav .patient-quick-info li span {
+        width: 300px;
+        height: auto;
+        position: absolute;
+        right: 0;
+        top: 30px;
+        background: #53bdb1;
+        z-index: 9;
+        padding: 10px;
+        border-radius: 0 0 0 5px;
+        color: #fff;
+        display: none; }
+    .patientProfile .patientTopNav .patient-quick-info li:hover {
+      background: #53bcb1;
+      color: #fff;
+      padding: 4px 10px; }
+      .patientProfile .patientTopNav .patient-quick-info li:hover p {
+        color: #fff; }
+      .patientProfile .patientTopNav .patient-quick-info li:hover span {
+        color: #fff;
+        display: block; }
