Reports Preview Section Designed

--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -21,6 +21,18 @@ div[numberbox="true"] {
   }
 }
 
+// Report Styles Start
+
+.report-section {
+  border: 1px solid #d3d3d3;
+  margin: 10px;
+  margin-top: 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+// Report Styles End
+
 /*
    React date picker customizing style
 */
