--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -14,6 +14,14 @@ div[numberbox="true"] input[type="text"] {
   background-color: #fbfbfb;
   min-width: 100%; }
 
+.report-section {
+  border: 1px solid #d3d3d3;
+  margin: 10px;
+  margin-top: 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px; }
+
 /*
    React date picker customizing style
 */
