--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -16,7 +16,7 @@
 
 .hptl-phase1-add-billing-form .Paper {
   border: 1px solid #5f5f5f;
-  min-height: 336px; }
+  min-height: 43vh; }
 
 .hptl-phase1-add-billing-form .Paper-secondary {
   border: 1px solid #5f5f5f; }
