--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.scss
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.scss
@@ -26,21 +26,15 @@
 
   .Paper {
     border: 1px solid #5f5f5f;
-    min-height: 336px;
+    min-height: 43vh;
   }
 
   .Paper-secondary {
     border: 1px solid #5f5f5f;
   }
 
-  // label {
-  //   font-weight: 400;
-  //   font-size: 11px;
-  // }
-
   .boderlabel {
     border-bottom: 1px dashed #000;
-    // width: 100%;
   }
 
   mark {
